deploy: e44dcf99336ca590134ddc4882202b8520c57d34

--- a/cv/index.html
+++ b/cv/index.html
@@ -329,7 +329,7 @@
       </td>
       <td class="p-1 pl-2 font-weight-light text">
         
-          <a href="mailto:cmanouan@alumni.cmu.edu" target="_blank">cmanouan@alumni.cmu.edu</a>
+          <a href="mailto:manouancedric@gmail.com" target="_blank">manouancedric@gmail.com</a>
         
       </td>
     </tr>
@@ -1426,7 +1426,7 @@
 
   
   
-    Last updated: August 08, 2025.
+    Last updated: August 11, 2025.
   
 
     </div>
