--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@ It’s worth noting that both of these ideas expand upon the concept of the Dual
       <div class="social">
         <div class="contact-icons">
   
-      <a href="mailto:%63%6D%61%6E%6F%75%61%6E@%61%6C%75%6D%6E%69.%63%6D%75.%65%64%75" title="email"><i class="fa-solid fa-envelope"></i></a>
+      <a href="mailto:%6D%61%6E%6F%75%61%6E%63%65%64%72%69%63@%67%6D%61%69%6C.%63%6F%6D" title="email"><i class="fa-solid fa-envelope"></i></a>
     
 
   
@@ -659,7 +659,7 @@ It’s worth noting that both of these ideas expand upon the concept of the Dual
 
   
   
-    Last updated: August 08, 2025.
+    Last updated: August 11, 2025.
   
 
     </div>
